tests/compile-fail/compile_fail__type_error__stackless__binop_two_strings.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: runtime temporary of non-numeric type
  ┌─ <input>:7:21
  │
7 │       textSet(0, 0, "F1" - "2.0");  
  │                     ^^^^^^^^^^^^ temporary strings cannot be created


